--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="settings">Settings</string>
     <string name="add">Add</string>
     <string name="enter_new_item_here">Enter new item here...</string>
+    <string name="list">List</string>
 </resources>
